--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@parse/react-native": "^0.0.1-alpha.18",
     "@react-native-async-storage/async-storage": "^1.19.3",
-    "@react-navigation/bottom-tabs": "^6.5.9",
-    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "expo-status-bar": "^1.7.1",
+    "expo-updates": "^0.18.17",
     "parse": "^4.2.0",
     "react-native": "^0.72.4"
   }
